--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
       <artifactId>jackson-datatype-jsr310</artifactId>
       <version>2.20.1</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
+    <dependency>
+        <groupId>io.github.cdimascio</groupId>
+        <artifactId>java-dotenv</artifactId>
+        <version>5.2.2</version>
+    </dependency>
   </dependencies>
 
   <build>
